@@ -39,6 +39,7 @@ CODE_COVERAGE_BRANCH_COVERAGE=1
 CODE_COVERAGE_LCOV_OPTIONS =  --no-external
 
 MAINTAINERCLEANFILES = cobcrun.1
+dist_noinst_SCRIPTS = return_path
 
 cobcrun.1: cobcrun.c $(top_srcdir)/configure.ac | $(COBCRUN)
 	"$(top_builddir)/pre-inst-env" $(HELP2MAN) --output=$@ --info-page=$(PACKAGE) "$(COBCRUN) -q"
