@@ -66,4 +66,3 @@ else
 		$SHELL
 	fi
 fi
-
