@@ -4,7 +4,7 @@
 # This script is a special variant of the atlocal script for testing
 # a not POSIX build (Visual Studio build for example) in a POSIX environment.
 #
-# Copyright (C) 2003-2012, 2014-2019 Free Software Foundation, Inc.
+# Copyright (C) 2003-2012, 2014-2020 Free Software Foundation, Inc.
 # Written by Keisuke Nishida, Roger While, Simon Sobisch
 #
 # This file is part of GnuCOBOL.
@@ -56,20 +56,8 @@ export PATH
 
 # possible path conversion for running the testsuite in an environment
 # that doesn't match the one where the tested binaries were built
-# Note: not needed for running the testsuite with MSYS as this translates the path
 _return_path () {
-	# For later reference only
-	#echo "$1" | sed 's/\//\\/g' | sed 's/^\\\([a-z]\)\\/\1:\\/g')
-	if test "$OSTYPE" = "cygwin"; then
-		cygpath -pw "$1"
-	else
-		# check for WSL / Bash on Windows; ignore error messages (file not available)
-		if $(grep -q "Microsoft" /proc/sys/kernel/osrelease 2>/dev/null); then
-			echo "$1" | sed -E 's+^/mnt/(.{1})+\1:+' | sed 's+:$+:/+1'
-		else
-			echo "$1"
-		fi
-	fi
+	${abs_top_srcdir}/bin/return_path convert "$1"
 }
 
 # unset all environment variables that are used in libcob
